--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "mongodb": "^1.4.40",
     "monk": "^1.0.1",
     "morgan": "~1.6.1",
+    "passport": "^0.3.2",
     "serve-favicon": "~2.3.0"
   }
 }
