--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "jade": "~1.11.0",
     "kerberos": "0.0.17",
     "mongodb": "^1.4.40",
+    "mongoose": "^4.3.7",
     "monk": "^1.0.1",
     "morgan": "~1.6.1",
     "passport": "^0.3.2",
