--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "node ./bin/www"
+    "start": "node ./bin/www",
+    "test": "node_modules/.bin/mocha -w"
   },
   "dependencies": {
     "body-parser": "~1.13.2",
@@ -12,11 +13,13 @@
     "express": "~4.13.1",
     "jade": "~1.11.0",
     "kerberos": "0.0.17",
+    "mocha": "^2.4.5",
     "mongodb": "^1.4.40",
     "mongoose": "^4.3.7",
     "monk": "^1.0.1",
     "morgan": "~1.6.1",
     "passport": "^0.3.2",
-    "serve-favicon": "~2.3.0"
+    "serve-favicon": "~2.3.0",
+    "should": "^8.2.1"
   }
 }
