--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "monk": "^1.0.1",
     "morgan": "~1.6.1",
     "passport": "^0.3.2",
+    "purecss": "^0.6.0",
     "serve-favicon": "~2.3.0",
     "should": "^8.2.1"
   }
