--- a/package.json
+++ b/package.json
@@ -19,8 +19,12 @@
     "monk": "^1.0.1",
     "morgan": "~1.6.1",
     "passport": "^0.3.2",
+    "passport-local": "^1.0.0",
     "purecss": "^0.6.0",
     "serve-favicon": "~2.3.0",
-    "should": "^8.2.1"
+    "should": "^8.2.1",
+    "express-session": "~1.0.0",
+    "connect-flash" : "~0.1.1",
+    "bcrypt-nodejs" : "latest"
   }
 }
