--- a/package.json
+++ b/package.json
@@ -24,7 +24,6 @@
     "serve-favicon": "~2.3.0",
     "should": "^8.2.1",
     "express-session": "~1.0.0",
-    "connect-flash" : "~0.1.1",
-    "bcrypt-nodejs" : "latest"
+    "connect-flash" : "~0.1.1"
   }
 }
