--- a/package.json
+++ b/package.json
@@ -24,6 +24,8 @@
     "serve-favicon": "~2.3.0",
     "should": "^8.2.1",
     "express-session": "~1.0.0",
-    "connect-flash" : "~0.1.1"
+    "body-parser": "^1.13.3",
+    "connect-ensure-login": "^0.1.1",
+    "express-session": "^1.11.3"
   }
 }
