--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "jade": "~1.11.0",
     "kerberos": "0.0.18",
     "mocha": "^2.4.5",
-    "mongodb": "^2.1.4",
+    "mongodb": "^2.1.7",
     "mongoose": "^4.3.7",
     "morgan": "~1.6.1",
     "passport": "^0.3.2",
@@ -30,7 +30,7 @@
     "socket.io": "^1.4.5"
   },
   "engine": {
-    "node": ">=0.10.36",
-    "npm": ">=3.5.3"
+    "node": "0.10.x",
+    "npm": "3.5.x"
   }
 }
