modif package.json

--- a/manifest.yml
+++ b/manifest.yml
@@ -1,5 +1,5 @@
 applications:
 - name: erkma # Indiquez le nom de votre application sur Bluemix
   host: erkma # À quelle adresse retrouvera-t-on l'application ?
-  command: node app # Commande de lancement de l'application
+  command: node ./bin/www # Commande de lancement de l'application
   memory: 128M # La mémoire dont vous avez besoin
