--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "mocha": "latest",
     "mongodb": "latest",
     "mongoose": "latest",
+    "mongoose-unique-validator": "^1.0.0",
     "morgan": "latest",
     "passport": "latest",
     "passport-local": "latest",
