--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "mongodb": "latest",
     "mongoose": "latest",
     "mongoose-unique-validator": "^1.0.0",
+    "moniker": "^0.1.2",
     "morgan": "latest",
     "passport": "latest",
     "passport-local": "latest",
