--- a/package.json
+++ b/package.json
@@ -31,5 +31,13 @@
     "serve-favicon": "latest",
     "should": "latest",
     "socket.io": "^1.4.5"
+  },
+  "devDependencies": {
+    "browser-sync": "^2.11.1",
+    "browserify": "^13.0.0",
+    "gulp": "^3.9.1",
+    "gulp-jshint": "^2.0.0",
+    "jshint": "^2.9.1",
+    "jshint-stylish": "^2.1.0"
   }
 }
