--- a/package.json
+++ b/package.json
@@ -36,8 +36,10 @@
     "browser-sync": "^2.11.1",
     "browserify": "^13.0.0",
     "gulp": "^3.9.1",
+    "gulp-dev-server": "^1.1.3",
     "gulp-jshint": "^2.0.0",
     "jshint": "^2.9.1",
-    "jshint-stylish": "^2.1.0"
+    "jshint-stylish": "^2.1.0",
+    "superagent": "^1.8.0"
   }
 }
