--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "gulp": "^3.9.1",
     "gulp-dev-server": "^1.1.3",
     "gulp-jshint": "^2.0.0",
+    "gulp-uglify": "^1.5.3",
     "jshint": "^2.9.1",
     "jshint-stylish": "^2.1.0",
     "superagent": "^1.8.0"
