Last commit before merge

--- a/package.json
+++ b/package.json
@@ -16,7 +16,6 @@
     "debug": "latest",
     "express": "^4.13.4",
     "express-session": "latest",
-    "jade": "latest",
     "kerberos": "latest",
     "mocha": "latest",
     "mongodb": "latest",
@@ -26,6 +25,7 @@
     "morgan": "latest",
     "passport": "latest",
     "passport-local": "latest",
+    "pug": "latest",
     "purecss": "latest",
     "randomstring": "^1.1.4",
     "serve-favicon": "latest",
